@@ -5,6 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
     <modules>
         <module>puick-common</module>
+        <module>puick-web</module>
+        <module>puick-sample</module>
     </modules>
 
     <parent>
@@ -52,6 +54,11 @@
                 <version>${spring.cloud-version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.hongdenglv</groupId>
+                <artifactId>puick-common</artifactId>
+                <version>1.0.0-SNAPSHOT</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
