@@ -1,0 +1,2 @@
+org.springframework.boot.autoconfigure.EnableAutoConfiguration=\
+  com.hongdenglv.puick.cors.config.WebCorsConfiguration
